# graphics

./: main.py
opengl/: CMakeLists.txt  lab10-2d.cpp  lab10-3d.cpp  lab11.cpp  lab12.cpp
ray_tracing/: lib.py  main.py
